Adds wrangler, cloudflare kv, club submission page
- ChatGPT can't CSS for shit!
- Add link to github
- Add report visit functionality
- Improve map card layout
- Add club submission button/page
- can run locally with `wrangler pages dev` (I lost so much time trying
  to do wrangler workers instead of pages)

Signed-off-by: Zinkelburger <andrewlbernal@gmail.com>

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,3 +7,11 @@ body,
 #__next {
   height: 100%;
 }
+
+:root {
+  --text: #090304;
+  --background: #fcf8f8;
+  --primary: #be4751;
+  --secondary: #dad595;
+  --accent: #b2ce74;
+}
