--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,4 +14,26 @@ body,
   --primary: #be4751;
   --secondary: #dad595;
   --accent: #b2ce74;
+  --radius: 0.75rem;
+}
+
+.button-style {
+  display: inline-block;
+  padding: 0.5rem 1.5rem;
+  border-radius: 0.5rem;                    /* gently rounded corners */
+  font-size: 1.5rem;
+  line-height: 2rem;
+  background-color: var(--accent);
+  color: var(--text);
+  cursor: pointer;
+  border: none;
+  transition: all 0.3s ease;
+  display: block;
+  margin: 0 auto; /* top margin */
+}
+
+.button-style:hover {
+  filter: brightness(0.9);                  /* auto-darken */
+  transform: translateY(-1px);              /* pop up */
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
