Improvements to the legend filter
- Suggest a club styling/spacing
- Right buttons styling/spacing/squishing

Signed-off-by: Zinkelburger <andrewlbernal@gmail.com>

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,6 +30,7 @@ body,
   transition: all 0.3s ease;
   display: block;
   margin: 0 auto; /* top margin */
+  text-decoration: none; /* remove underline when used on a <a> */
 }
 
 .button-style:hover {
