sucks but does remove scroll bars
Signed-off-by: Zinkelburger <andrewlbernal@gmail.com>

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,11 +28,13 @@ html,
 body,
 #__next {
   height: 100%;
+  width: 100%;
 }
 
 @layer base {
   body {
     font-family: "Ubuntu", ui-sans-serif, system-ui, sans-serif;
+    margin: 0;
   }
 }
 
